# servicemp3epl

./: Makefile.am  README.md  configure.ac
.github/workflows/: servicemp3epl.yml
CI/: build.sh
plugin/: Makefile.am  plugin.py
servicelibpl/: Makefile.am  m3u8.cpp  pythonmodule.cpp  servicelibpl.cpp  servicelibpl.h
servicemp3/: Makefile.am  pythonmodule.cpp  servicelibpl.cpp  servicelibpl.h  servicemp3.cpp  servicemp3.h  servicemp3record.cpp
servicemp3epl/: Makefile.am  m3u8.cpp  pythonmodule.cpp  servicelibpl.cpp  servicelibpl.h  servicemp3.cpp
